fixed het gebrek aan spacing tussen de naam en de comment in reacties

--- a/src/style/components/_comment.scss
+++ b/src/style/components/_comment.scss
@@ -46,6 +46,8 @@
 
 		&--comment {
 			grid-column: span 2;
+			padding: 1rem;
+			
 		}
 	}
 
